--- a/style.css
+++ b/style.css
@@ -17,16 +17,22 @@ main{
     height: 100vh;
     width: 100%;
 }
-
-.right{
-    padding: 50px;
+.left{
+    display: none;
 }
-
+.right{
+    padding: 40px;
+    height: 100%;
+}
+.sing-up{
+    font-size: 0.9rem;
+    text-align: right;
+}
 .logo-right,
 .logo-right,
 svg{
-    height: 300px;
-    width: 500px;
+    height: 70px;
+    width:120px;
 }
 
 .join{
@@ -37,16 +43,118 @@ svg{
 }
 
 .join h1{
-    font-size: 5em;
+    font-size: 2em;
     font-weight: 600;
 }
 
 .join h2{
-    font-size: 3em;
+    font-size: 1em;
     font-weight: 600;
 }
 
 .join p{
-    font-size: 2.2em;
+    font-size: 1em;
     font-weight: 600;
+}
+form{
+    margin: 50px auto;
+}
+.email,
+.password{
+    display:flex;
+    flex-direction: column;
+}
+label{
+    font-weight:600;
+}
+input[type="email"],
+input[type="password"]{
+    padding-left: 10px;
+    height: 48px;
+    margin-top: 10px;
+    font-weight: 600;
+    border-radius: 2px solid #34333c;
+    border-radius: 10px;
+    border: none;
+    color: #fff;
+    background-color: #1e1c24;
+}
+
+.password{
+    margin-top: 20px;
+}
+
+button[type="submit"]{
+    height:48px;
+    margin-top: 30px;
+    font-weight: 600;
+    color:white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    background: linear-gradient(90deg, #6871fc 0, #393ddc 100%);
+}
+
+@media only screen and (min-width: 200px) {
+    button[type="submit"]{
+        width: 100%;
+    }
+}
+
+/* responsive mobile fist */
+
+@media only screen and (min-width:500px) {
+    .right{
+        width: 90%;
+        margin: auto;
+    }
+}
+
+@media only screen and (min-width:700px) {
+    .right{
+        width: 70%;
+        margin: auto;
+    }
+}
+
+/*
+    display left section 900px
+*/
+
+@media only screen and (min-width:900px) {
+    main {
+        display: flex;
+    }
+    .left{
+        position: relative;
+        display: block;
+        height: 100%;
+        width: 50%;
+    }
+    .left img{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0px 30px 30px 0px;
+        z-index: -1;
+    }
+    .right{
+        height: 85%;
+        margin: auto;
+        width: 50%
+    }
+    .right h1{
+        font-size:2rem;
+    }
+    .logo-right{
+        display:none;
+    }
+    .join{
+        display:none;
+    }
+    .sing-up{
+        margin-top: 50px;
+    }
 }
