--- a/style.css
+++ b/style.css
@@ -7,9 +7,12 @@
 }
 
 body{
-
     color:white;
     background-color: #191720;
+}
+
+a{
+    color: white;
 }
 
 main{
@@ -86,7 +89,7 @@ input[type="password"]{
 
 button[type="submit"]{
     height:48px;
-    margin-top: 30px;
+    margin-top: 45px;
     font-weight: 600;
     color:white;
     border: none;
@@ -131,6 +134,9 @@ button[type="submit"]{
         height: 100%;
         width: 50%;
     }
+     h1 h2{
+        font-weight: 500 !important;
+    }
     .left img{
         position: absolute;
         top: 0;
@@ -139,6 +145,29 @@ button[type="submit"]{
         height: 100%;
         border-radius: 0px 30px 30px 0px;
         z-index: -1;
+    }
+    .left
+    .filterBackground{
+        padding:20px;
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, 5%);
+        width: 80%;
+        height: 90%;
+        margin: auto;
+        border-radius: 15px;
+        backdrop-filter: blur(60px);
+        background-color: rgba(25,23,32,0.2);
+    }
+    .message{
+        display: flex;
+        flex-direction: column;
+        margin-top:20px;
+        gap:20px;
+    }
+    .glass-account{
+        position: absolute;
+        bottom: 20px;
     }
     .right{
         height: 85%;
