--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ a{
 }
 
 main{
-    font-family: 'Nunito Sans', sans-serif;
+    padding: 10px;
     height: 100vh;
     width: 100%;
+    font-family: 'Nunito Sans', sans-serif;
 }
 .left{
     display: none;
@@ -102,6 +103,15 @@ button[type="submit"]{
     button[type="submit"]{
         width: 100%;
     }
+    h1{
+        display: none;
+    }
+    hr{
+        display: none;
+    }
+    .sing-up{
+        margin-bottom: 5px;
+    }
 }
 
 /* responsive mobile fist */
@@ -134,9 +144,14 @@ button[type="submit"]{
         height: 100%;
         width: 50%;
     }
-     h1 h2{
-        font-weight: 500 !important;
+
+    h1{
+        display: block;
     }
+    hr{
+        display: block;
+    }
+
     .left img{
         position: absolute;
         top: 0;
