--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 }
 
 a{
+    font-weight: 600;
     color: white;
 }
 
@@ -137,6 +138,7 @@ button[type="submit"]{
 @media only screen and (min-width:900px) {
     main {
         display: flex;
+        padding: 0;
     }
     .left{
         position: relative;
@@ -144,7 +146,10 @@ button[type="submit"]{
         height: 100%;
         width: 50%;
     }
-
+    .glass-account,
+    .sing-up{
+        font-size: 20px;
+    }
     h1{
         display: block;
     }
@@ -180,6 +185,18 @@ button[type="submit"]{
         margin-top:20px;
         gap:20px;
     }
+    .message h1{
+        font-size: 40px;
+        font-weight: 500;
+    }
+    .message h2{
+        font-size: 32px;
+        font-weight: 500;
+    }
+    .message p{
+        font-size: 20px;
+        font-weight: 500;
+    }
     .glass-account{
         position: absolute;
         bottom: 20px;
@@ -200,5 +217,31 @@ button[type="submit"]{
     }
     .sing-up{
         margin-top: 50px;
+    }
+
+    input[type="email"],
+    input[type="password"],
+    button[type="submit"]{
+        height: 62px;
+    }
+
+    button[type="submit"]{
+        font-size: 18px;
+    }
+}
+
+@media only screen and (min-width: 1200px){
+
+    form{
+        max-width: 500px;
+    }
+    hr{
+        max-width: 500px;
+        margin: auto;
+    }
+    .sing-in,
+    .sing-up{
+        max-width: 500px;
+        margin: 50px auto;
     }
 }
